changd > colors@1.0.0 test /Users/olaftietze/development/projects/github/color-util.git > gulp build
[07:24:17] Requiring external module babel-register
[07:24:17] Using gulpfile ~/development/projects/github/color-util.git/gulpfile.babel.js
[07:24:17] Starting 'build'...
[07:24:17] Finished 'build' after 36 ms to just build

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "opaque-colors",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "gulp build"
   },
   "keywords": [
     "sass",
